--- a/plugin.xml
+++ b/plugin.xml
@@ -14,16 +14,16 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		<js-module name="FirebasePlugin" src="www/firebase.js">
 			<clobbers target="FirebasePlugin" />
 		</js-module>
-		<config-file parent="/*" target="res/xml/config.xml">
+		<config-file parent="/*" target="app/src/main/res/xml/config.xml">
 			<feature name="FirebasePlugin">
 				<param name="android-package" value="org.apache.cordova.firebase.FirebasePlugin" />
 				<param name="onload" value="true" />
 			</feature>
 		</config-file>
-		<config-file parent="/resources" target="res/values/strings.xml">
+		<config-file parent="/resources" target="app/src/main/res/values/strings.xml">
 			<string name="google_app_id">@string/google_app_id</string>
 		</config-file>
-		<config-file parent="/resources" target="res/values/strings.xml">
+		<config-file parent="/resources" target="app/src/main/res/values/strings.xml">
 			<string name="google_api_key">@string/google_api_key</string>
 		</config-file>
 		<config-file target="app/src/main/AndroidManifest.xml" parent="/*">
